--- a/_tmux.conf
+++ b/_tmux.conf
@@ -5,17 +5,22 @@ unbind-key C-b
 
 # key bind (windowの移動)
 # カーソルキーで移動
-bind -n left previous-window
-bind -n right next-window
+bind -n S-left previous-window
+bind -n S-right next-window
 
-# key bind (paneの移動)
-# Shift + カーソルキーで移動
-bind -n S-left select-pane -L
-bind -n S-down select-pane -D
-bind -n S-up select-pane -U
-bind -n S-right select-pane -R
 
 # 256色端末を使用する
 set-option -g default-terminal "screen-256color"
 # viのキーバインドを使用する
 set-window-option -g mode-keys vi
+
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+bind r source-file ~/.tmux.conf \; display-message "Reload Config!!"
+
+
+set -g @tpm_plugins " \
+    tmux-plugins/tmux-resurrect \
+"
+# Initialize tpm
+run-shell ~/.tmux/plugins/tpm/tpm
