--- a/_tmux.conf
+++ b/_tmux.conf
@@ -24,3 +24,8 @@ set -g @tpm_plugins " \
 "
 # Initialize tpm
 run-shell ~/.tmux/plugins/tpm/tpm
+
+set -g mode-mouse off
+set -g mouse-resize-pane off
+set -g mouse-select-pane off
+set -g mouse-select-window off
