--- a/_tmux.conf
+++ b/_tmux.conf
@@ -25,7 +25,53 @@ set -g @tpm_plugins " \
 # Initialize tpm
 run-shell ~/.tmux/plugins/tpm/tpm
 
-set -g mode-mouse off
-set -g mouse-resize-pane off
+# マウス無効　
 set -g mouse-select-pane off
 set -g mouse-select-window off
+
+# mでムーブタブ
+bind-key m command-prompt -p "move window to:"  "swap-window -t '%%'"
+
+# ステータスバーの色を設定する
+set -g status-fg white
+set -g status-bg blue
+
+# ウィンドウリストの色を設定する
+setw -g window-status-fg white
+setw -g window-status-bg default
+setw -g window-status-attr dim
+
+# アクティブなウィンドウを目立たせる
+setw -g window-status-current-fg white
+setw -g window-status-current-bg Green
+setw -g window-status-current-attr bright
+
+# ペインボーダーの色を設定する
+set -g pane-border-fg white
+set -g pane-border-bg black
+# アクティブなペインを目立たせる
+set -g pane-active-border-fg white
+set -g pane-active-border-bg white
+
+# コマンドラインの色を設定する
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
+# ステータスバーを設定する
+## 左パネルを設定する
+set -g status-left-length 0
+#set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+## 右パネルを設定する
+set -g status-right "#[fg=white][%Y-%m-%d(%a) %H:%M]"
+## ステータスバーのUTF-8サポートを有効にする
+set -g status-utf8 on
+## リフレッシュの間隔を設定する(デフォルト 15秒)
+set -g status-interval 60
+## ウィンドウリストの位置を中心寄せにする
+set -g status-justify left
+## ヴィジュアルノーティフィケーションを有効にする
+setw -g monitor-activity on
+set -g visual-activity on
+## ステータスバーを上部に表示する
+set -g status-position bottom
