ファイル追加

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -17,7 +17,7 @@ set-window-option -g mode-keys vi
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 bind r source-file ~/.tmux.conf \; display-message "Reload Config!!"
-
+set novisualbell
 
 set -g @tpm_plugins " \
     tmux-plugins/tmux-resurrect \
@@ -28,7 +28,7 @@ run-shell ~/.tmux/plugins/tpm/tpm
 # マウス無効　
 set -g mouse-select-pane off
 set -g mouse-select-window off
-
+set-window-option -g mode-mouse on
 # mでムーブタブ
 bind-key m command-prompt -p "move window to:"  "swap-window -t '%%'"
 
@@ -78,3 +78,7 @@ set -g status-position bottom
 
 # renumber window
 set-option -g renumber-windows on
+# scroll
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+#install https://bitheap.org/mouseterm/
