--- a/_tmux.conf
+++ b/_tmux.conf
@@ -38,17 +38,18 @@ set -g status-bg blue
 
 # ウィンドウリストの色を設定する
 setw -g window-status-fg white
-setw -g window-status-bg default
+setw -g window-status-bg blue
 setw -g window-status-attr dim
 
 # アクティブなウィンドウを目立たせる
 setw -g window-status-current-fg white
-setw -g window-status-current-bg Green
+setw -g window-status-current-bg colour25
 setw -g window-status-current-attr bright
 
 # ペインボーダーの色を設定する
 set -g pane-border-fg white
 set -g pane-border-bg black
+
 # アクティブなペインを目立たせる
 set -g pane-active-border-fg white
 set -g pane-active-border-bg white
