--- a/_tmux.conf
+++ b/_tmux.conf
@@ -14,10 +14,28 @@ set-option -g default-terminal "screen-256color"
 # viのキーバインドを使用する
 set-window-option -g mode-keys vi
 
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# vでマーク開始
+bind -t vi-copy v begin-selection
+
+# Vで行の先頭からマーク開始
+bind -t vi-copy V select-line
+
+# C-vで矩形選択の切り替え
+bind -t vi-copy C-v rectangle-toggle
+
+# yでヤンク
+bind -t vi-copy y copy-selection
+
+# Yで1行ヤンク
+bind -t vi-copy Y copy-line
+
+
+
+
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 bind r source-file ~/.tmux.conf \; display-message "Reload Config!!"
-set novisualbell
 
 set -g @tpm_plugins " \
     tmux-plugins/tmux-resurrect \
@@ -25,10 +43,21 @@ set -g @tpm_plugins " \
 # Initialize tpm
 run-shell ~/.tmux/plugins/tpm/tpm
 
-# マウス無効　
-set -g mouse-select-pane off
-set -g mouse-select-window off
 set-window-option -g mode-mouse on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set-option -g buffer-limit 100
+set-option -g history-limit 3000
+# 画面ドラッグ時にコピーモードにする
+set-option -g mode-mouse on
+
+# マウスでペインを選択できるようにする
+set-option -g mouse-select-pane on
+
+# マウスでウィンドウを切り替えられるようにする
+set-option -g mouse-select-window on
+
+# マウスでリサイズできるようにする
+set-option -g mouse-resize-pane on
 
 # mでムーブタブ
 bind-key m command-prompt -p "move window to:"  "swap-window -t '%%'"
@@ -80,7 +109,6 @@ set -g status-position bottom
 
 # renumber window
 set-option -g renumber-windows on
-# scroll
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-#install https://bitheap.org/mouseterm/
+#reattach-to-user-namespace
+
