--- a/_tmux.conf
+++ b/_tmux.conf
@@ -14,26 +14,24 @@ set-option -g default-terminal "screen-256color"
 # viのキーバインドを使用する
 set-window-option -g mode-keys vi
 
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-# vでマーク開始
-bind -t vi-copy v begin-selection
 
-# Vで行の先頭からマーク開始
-bind -t vi-copy V select-line
+#-------------------------------------------------------------------
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # C-vで矩形選択の切り替え
 bind -t vi-copy C-v rectangle-toggle
 
-# yでヤンク
-bind -t vi-copy y copy-selection
-
-# Yで1行ヤンク
-bind -t vi-copy Y copy-line
-
-
-
-
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 bind r source-file ~/.tmux.conf \; display-message "Reload Config!!"
 
@@ -111,4 +109,8 @@ set -g status-position bottom
 set-option -g renumber-windows on
 
 #reattach-to-user-namespace
+bind-key -n M-Up resize-pane -U 5
+bind-key -n M-Down resize-pane -D 5
 
+bind-key -n M-Left resize-pane -L 5
+bind-key -n M-Right resize-pane -R 5
