--- a/_tmux.conf
+++ b/_tmux.conf
@@ -114,3 +114,7 @@ bind-key -n M-Down resize-pane -D 5
 
 bind-key -n M-Left resize-pane -L 5
 bind-key -n M-Right resize-pane -R 5
+
+bind c new-window -c "#{pane_current_path}"
+bind % split-window -hc "#{pane_current_path}"
+bind '"' split-window -vc "#{pane_current_path}"
