--- a/_tmux.conf
+++ b/_tmux.conf
@@ -1,6 +1,6 @@
 # Prefix変更 C-b -> C-t
-set-option -g prefix C-t
-bind-key C-t send-prefix
+set-option -g prefix C-j
+bind-key C-j send-prefix
 unbind-key C-b
 
 # key bind (windowの移動)
