add marcdown previer

--- a/vim/dein.toml
+++ b/vim/dein.toml
@@ -35,3 +35,15 @@ repo = "Shougo/vimfiler.vim"
 
 [[plugins]]
 repo = "bronson/vim-trailing-whitespace"
+
+[[plugins]]
+repo = "jwhitley/vim-matchit"
+
+[[plugins]]
+repo = "plasticboy/vim-markdown"
+
+[[plugins]]
+repo = "kannokanno/previm"
+
+[[plugins]]
+repo = "tyru/open-browser.vim"
