--- a/_tmux.conf
+++ b/_tmux.conf
@@ -1,3 +1,6 @@
+set-option -g default-shell /bin/zsh
+set-option -g default-command /bin/zsh
+
 # Prefix変更 C-b -> C-t
 set-option -g prefix C-j
 bind-key C-j send-prefix
