--- a/vim/dein.toml
+++ b/vim/dein.toml
@@ -24,8 +24,18 @@ repo = "Shougo/unite.vim"
 
 [[plugins]]
 repo = "Shougo/vimproc.vim"
-[plugins.build]
-mac = "make -f make_mac.mak"
+hook_post_update = '''
+  if dein#util#_is_windows()
+    let cmd = 'tools\\update-dll-mingw'
+  elseif dein#util#_is_cygwin()
+    let cmd = 'make -f make_cygwin.mak'
+  elseif executable('gmake')
+    let cmd = 'gmake'
+  else
+    let cmd = 'make'
+  endif
+  let g:dein#plugin.build = cmd
+'''
 
 [[plugins]]
 repo = "Shougo/vimfiler.vim"
