--- a/vim/dein.toml
+++ b/vim/dein.toml
@@ -54,3 +54,9 @@ repo = "thinca/vim-quickrun"
 
 [[plugins]]
 repo = "tyru/open-browser.vim"
+
+[[plugins]]
+repo = "soramugi/auto-ctags.vim"
+
+[[plugins]]
+repo = "kana/vim-submode"
