--- a/_tmux.conf
+++ b/_tmux.conf
@@ -18,7 +18,8 @@ set-option -g default-terminal "screen-256color"
 set-window-option -g mode-keys vi
 
 #-------------------------------------------------------------------
-set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+#set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
